# aws

.github/workflows/: build_test_coverage.yml
justinthecloud_serverless/: .gitignore  Makefile  app.py  pyproject.toml  serverless_stack.py
justinthecloud_serverless/justinthecloud_serverless/: __init__.py
justinthecloud_serverless/serverless_app/: __init__.py  iam_roles_stack.py  serverless_stack.py
justinthecloud_serverless/serverless_app/lambda_handler/: lambda_handler.py
justinthecloud_serverless/tests/: test_app.py  test_iam_roles_stack.py  test_serverless_stack.py
